# nsu_c_labs

comp_arch/lr1/: CMakeLists.txt  a.out  main.c
comp_arch/lr2/: lr2.c
comp_arch/lr3/: info  lr3-64.s  lr3-86-O3.s  lr3-86.s  lr3.c
comp_arch/lr4/: arm32.s  arm32O3.s  arm64.s  lr4.c
comp_arch/lr6/: CMakeLists.txt  main  main.cpp
comp_arch/lr7/: .main.c.swp  CMakeLists.txt  a.out  main.c
comp_arch/lr7_1/: CMakeLists.txt  a.out  main.c
comp_arch/lr7_2/: CMakeLists.txt  a.out  main.c
comp_arch/lr8/: CMakeLists.txt  main  main.cpp
comp_arch/lr9/: CMakeLists.txt  a.out  main.cpp
computational_math/lab1/: CMakeLists.txt  main.c
oper_syst/lab10/: main  main.c  test
oper_syst/lab11/: main  main.c  test
oper_syst/lab18/: CMakeLists.txt  main.c
oper_syst/lab19/: CMakeLists.txt  main.c
oper_syst/lab20/: main.c
oper_syst/lab21/: CMakeLists.txt  main.c
oper_syst/lab22/: CMakeLists.txt  main.c
oper_syst/lab25/: CMakeLists.txt  main.c
oper_syst/lab26/: CMakeLists.txt  main.c
oper_syst/lab26_1/: CMakeLists.txt  main.c
oper_syst/lab27/: CMakeLists.txt  main.c
oper_syst/lab28/: CMakeLists.txt  main.c
oper_syst/lab3/: main  main.c
oper_syst/lab30/: CMakeLists.txt  main.c
oper_syst/lab30_1/: CMakeLists.txt  main.c
oper_syst/lab31/: CMakeLists.txt  main.c
oper_syst/lab31_1/: CMakeLists.txt  main.c
oper_syst/lab32/: CMakeLists.txt  main.c
oper_syst/lab32_1/: CMakeLists.txt  main.c
oper_syst/lab33/: CMakeLists.txt  main.c
oper_syst/lab6/: test  (+3 more)
parall_prog/lab2/lab2_1/: CMakeLists.txt  main.c
parall_prog/lab5/: CMakeLists.txt  main.c
(+50 files in other folders)
